--- a/src/components/YoutubeCard.css
+++ b/src/components/YoutubeCard.css
@@ -3,7 +3,6 @@
     border-radius: 10px;
     overflow: hidden;
     /* background-color: #333; */
-    color: #fff;
     font-family: Arial, sans-serif;
     /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
     margin-bottom: 20px;
@@ -14,6 +13,20 @@
     display: block;
 }
 
+.top-bar{
+  display: flex;
+  gap: 5px;
+}
+.avatar{
+  width: 20%;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.avatar-card{
+  width: 100%;
+  height: 50px;
+}
 .content {
     padding: 15px;
 }
@@ -21,13 +34,13 @@
 .title {
     font-size: 18px;
     font-weight: bold;
-    margin-bottom: 10px;
 }
 
 .channel-info {
     display: flex;
-    align-items: center;
-    margin-bottom: 10px;
+    align-items:start;
+    flex-direction: column;
+    width: 80%;
 }
 
 .channel-picture {
